@@ -25,6 +25,10 @@
   <c:param name="path" value="${command.path}${entry.name}" />
   <c:param name="revision" value="${command.revision}" />
 </c:url>
+<c:url var="showLockLinkUrl" value="showlock.svn">
+  <c:param name="path" value="${command.path}${entry.name}" />
+  <c:param name="revision" value="${command.revision}" />
+</c:url>
 <c:url var="showDirLinkUrl" value="repobrowser.svn">
   <c:param name="path" value="${command.path}" />
   <c:param name="revision" value="${command.revision}" />
@@ -47,6 +51,7 @@
   <c:when test="${pageName == 'repobrowse'}">
     <input type="button" class="btn" value="Flatten dir" onclick="javascript:return doFlatten('${command.path}');"/>
     <input type="button" class="btn" value="Show log" onclick="javascript:parent.location='${showLogLinkUrl}';"/>
+    <input type="button" class="btn" value="Show locks" onclick="javascript:parent.location='${showLockLinkUrl}';"/>
   </c:when>
 
   <c:when test="${pageName == 'showLog'}">
@@ -74,6 +79,10 @@
     <input type="button" class="btn" value="Show file" onclick="javascript:parent.location='${showFileLinkUrl}';"/>
     <input type="button" class="btn" value="Download" onclick="javascript:parent.location='${downloadLinkUrl}';"/>
     <input type="button" class="btn" value="Show log" onclick="javascript:parent.location='${showLogLinkUrl}';"/>
+  </c:when>
+
+  <c:when test="${pageName == 'showLock'}">
+    <input type="button" class="btn" value="Show directory" onclick="javascript:parent.location='${showDirLinkUrl}';"/>
   </c:when>
 
   <c:otherwise>
